add pathom link

--- a/content/news/2021/06/04/deref.adoc
+++ b/content/news/2021/06/04/deref.adoc
@@ -32,6 +32,7 @@ Some interesting library updates and posts this week:
 * Joe Littlejohn at Juxt wrote an overview of the https://www.juxt.pro/blog/json-in-clojure[Clojure JSON ecosystem] covering many popular libraries and their tradeoffs
 * https://github.com/oakes/odoyle-rules[odoyle-rules] - Zach Oakes added a new section on https://github.com/oakes/odoyle-rules#defining-rules-dynamically[defining rules dynamically]
 * https://vlaaad.github.io/reveal/[Reveal] - Vlad wrote about viewing Vega charts in Reveal
+* https://github.com/wilkerlucio/pathom[Pathom] - Wilker Lucio gives some https://blog.wsscode.com/pathom-updates-10/[updates on many features]
 
 ## Art
 
