--- a/content/news/2021/06/04/deref.adoc
+++ b/content/news/2021/06/04/deref.adoc
@@ -38,3 +38,10 @@ Some interesting library updates and posts this week:
 
 * As always Jack Rusher has been up to making beautiful art with Clojure, in particular exploring 3D rendered attractors like the https://twitter.com/jackrusher/status/1398336040260231171[Golden Aizwa Attractor] (the https://twitter.com/jackrusher/status/1398368701058011141[Clojure code]) and https://twitter.com/jackrusher/status/1398573268894900227[Three-Scroll Uunified Attractor], and https://twitter.com/jackrusher/status/1398674759110561798[one made in bone]. Hit his https://twitter.com/jackrusher[feed] for lots more cool projects, often made with Clojure.
 
+## Feedback
+
+You can find future episodes on the https://clojure.org/feed.xml[RSS feed] for this blog. Should it be an email newsletter too?
+
+Let us know! 
+
+
