--- a/content/reference/deps_and_cli.adoc
+++ b/content/reference/deps_and_cli.adoc
@@ -57,7 +57,7 @@ Use the following exec-opt to invoke a function that takes a map:
 
 [source]
 ----
-clojure [clj-opt*] -X[aliases] [a/fn] [kpath v]*
+clojure [clj-opt*] -X[aliases] [a/fn*] [kpath v]*
 ----
 
 `-X` is configured with an arg map with `:exec-fn` and `:exec-args` keys, and stored under an alias in `deps.edn`:
@@ -102,7 +102,7 @@ If you want to execute an arbitrary function, you can pass it on the command ins
 clj -X my.qualified/fn :config 789
 ----
 
-Additionally, you may execute mutliple functions as if by `->` where each receives the key-path and values map from the previous function:
+Additionally, you may list multiple functions to execute as if by `->`. The first function will receive the :exec-args and command-line key-path / value map. Subsequent functions will receive the result of the previous function (which will only include those kvs if the first function passes them along).
 
 [source]
 ----
