--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -24,7 +24,7 @@ Recent official releases are described here. Prereleases and older versions can 
 
 === 1.10.3.875 (May 25, 2021) [[v1.10.3.875]]
 
-* New: support for specifying multiple functions with -X with -> semantics
+* New: support for specifying multiple functions with -X with `pass:[->]` semantics
 * https://clojure.atlassian.net/browse/TDEPS-182[TDEPS-182] - Improve deprecation message to be more accurate
 * https://clojure.atlassian.net/browse/TDEPS-183[TDEPS-183] - Fix -Sdescribe output to be valid edn on Windows
 * https://clojure.atlassian.net/browse/TDEPS-179[TDEPS-179] - Fix incorrect classpath when :classpath-overrides removes path
