--- a/content/guides/repl/annex_community_resources.adoc
+++ b/content/guides/repl/annex_community_resources.adoc
@@ -23,6 +23,7 @@ of REPLs compared to shells, and provides guidelines for using the Clojure REPL.
 a ClojureVerse discussion where community members describe their development configurations and how they use it them in details.
 * https://vvvvalvalval.github.io/posts/what-makes-a-good-repl.html[What makes a good REPL?]: this blog post provides 
 a general reflection on the benefits of REPLs, and the programming language features which enable them.
+* https://www.youtube.com/watch?v=gIoadGfm5T8[REPL-Driven Development: Clojure's Superpower]: Sean Corfield at the London Clojurians online meetup, talking about why Clojure's REPL is so powerful, including a live, 40 minute demo, building a simple web app via the REPL (starting at about 11 minutes in).
 * https://vimeo.com/230220635[REPL-Based Development Demo]: a video showing how the REPL is used for development 
 on an example project.
 * The https://gist.github.com/daveray/1441520[Seesaw REPL Tutorial] teaches you to build Graphical User Interfaces 
