--- a/content/news/2021/06/18/deref.adoc
+++ b/content/news/2021/06/18/deref.adoc
@@ -14,7 +14,7 @@ Welcome to the Clojure Deref! This is a periodic link/news roundup for the Cloju
 
 ## Sponsorship Spotlight
 
-Lately https://twitter.com/cgrand[Christophe Grand] and Baptiste Dupuch[https://twitter.com/BaptisteDupuch] have been https://twitter.com/cgrand/status/1404446965778292736[teasing] their work on a new ClojureDart runtime with Flutter support. You can support their work on GitHub: https://github.com/sponsors/cgrand[cgrand] https://github.com/sponsors/dupuchba[dupuchba]. https://github.com/nubank[Nubank] (users of both Clojure and Flutter) are now supporting both!
+Lately https://twitter.com/cgrand[Christophe Grand] and https://twitter.com/BaptisteDupuch[Baptiste Dupuch] have been https://twitter.com/cgrand/status/1404446965778292736[teasing] their work on a new ClojureDart runtime with Flutter support. You can support their work on GitHub: https://github.com/sponsors/cgrand[cgrand] https://github.com/sponsors/dupuchba[dupuchba]. https://github.com/nubank[Nubank] (users of both Clojure and Flutter) are now supporting both!
 
 ## Podcasts and videos
 
@@ -51,7 +51,7 @@ Some interesting library updates and posts this week:
 
 ## Fun and Games
 
-* https://tylerxhobbs.com/fidenza - Tyler Hobbs has a long history of doing interesting generative art with Clojure and he has published a rundown of his newest generative algorithm. Not explicitly Clojure but fascinating to read.
+* https://tylerxhobbs.com/fidenza[Fidenza] - Tyler Hobbs has a long history of doing interesting generative art with Clojure and he has published a rundown of his newest generative algorithm. Not explicitly Clojure but fascinating to read.
 * https://ertugrulcetin.github.io/racing-game-cljs/[ClojureScript racing game] - Ertuğrul Çetin published this game this week
 
 ## Throwback Friday (I know, I'm doing it wrong)
