--- a/content/news/2021/06/25/deref.adoc
+++ b/content/news/2021/06/25/deref.adoc
@@ -45,7 +45,7 @@ Over the last couple years, the https://calva.io/[Calva] team has been putting a
 * https://ostash.dev/posts/2021-06-24-edn-data-notation/[Data notation in Clojure] - Roman Ostash
 * https://blog.jakubholy.net/2021/specific-vs-general-cryogen/[Specific vs. general: Which is better?] - Jakub Holý
 
-## Libraries and Tools
+## Libraries
 
 Some interesting library updates and posts this week:
 
